After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 757020 - two-lines-renderer: Valgrind complains about uninitialized reads
two-lines-renderer: Valgrind complains about uninitialized reads
Status: RESOLVED FIXED
Product: libgd
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: libgd maintainer(s)
libgd maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-10-23 12:48 UTC by Debarshi Ray
Modified: 2015-11-24 14:29 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
two-lines-renderer: Don't read uninitialized values (846 bytes, patch)
2015-10-23 12:51 UTC, Debarshi Ray
committed Details | Review

Description Debarshi Ray 2015-10-23 12:48:31 UTC
Running gnome-photos in valgrind gives me a lot of these:

 Conditional jump or move depends on uninitialised value(s)
    at 0x49996C: apply_subtitle_style_to_layout (gd-two-lines-renderer.c:106)
    by 0x499C1C: gd_two_lines_renderer_prepare_layouts (gd-two-lines-renderer.c:153)
    by 0x499D4B: gd_two_lines_renderer_get_size (gd-two-lines-renderer.c:191)
    by 0x49A533: gd_two_lines_renderer_get_preferred_width (gd-two-lines-renderer.c:371)
    by 0x7CB520C: gtk_cell_renderer_get_preferred_width (in /usr/lib64/libgtk-3.so.0.1800.2)
    by 0x7CAD220: gtk_cell_area_request_renderer (in /usr/lib64/libgtk-3.so.0.1800.2)
 [...]
 Conditional jump or move depends on uninitialised value(s)
    at 0x4999DF: apply_subtitle_style_to_layout (gd-two-lines-renderer.c:107)
    by 0x499C1C: gd_two_lines_renderer_prepare_layouts (gd-two-lines-renderer.c:153)
    by 0x499D4B: gd_two_lines_renderer_get_size (gd-two-lines-renderer.c:191)
    by 0x49A533: gd_two_lines_renderer_get_preferred_width (gd-two-lines-renderer.c:371)
    by 0x7CB520C: gtk_cell_renderer_get_preferred_width (in /usr/lib64/libgtk-3.so.0.1800.2)
    by 0x7CAD220: gtk_cell_area_request_renderer (in /usr/lib64/libgtk-3.so.0.1800.2)
Comment 1 Debarshi Ray 2015-10-23 12:51:00 UTC
Created attachment 313940 [details] [review]
two-lines-renderer: Don't read uninitialized values
Comment 2 Debarshi Ray 2015-11-24 14:28:55 UTC
From #gnome-design on GIMPNet:
<hadess> rishi, looks bogus, but fine
Comment 3 Debarshi Ray 2015-11-24 14:29:09 UTC
Comment on attachment 313940 [details] [review]
two-lines-renderer: Don't read uninitialized values

Pushed to master.