two-lines-renderer: Don't read uninitialized values

https://bugzilla.gnome.org/show_bug.cgi?id=757020